--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
       "role": "Owner"
     }
   ],
+  "require": {
+    "php": ">=7.0"
+  },
   "autoload": {
     "psr-4": {"Hydro\\": "src/"}
   }
